fixed h1 font displaying wrong font

--- a/lab1/css/styles.css
+++ b/lab1/css/styles.css
@@ -76,10 +76,8 @@ body {
 }
 
 h1 {
-  font-family: "Open Sans", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 500;
+  font-family: "Jacques Francois", serif;
+  font-weight: 400;
   font-style: normal;
-  font-variation-settings:
-    "wdth" 100;
 }
+
